@@ -70,6 +70,7 @@ typedef enum {
     SAT_CFG_INT_MODULE_VIEW_1,        /*!< Type of view 1 */
     SAT_CFG_INT_MODULE_VIEW_2,        /*!< Type of view 2 */
     SAT_CFG_INT_MODULE_VIEW_3,        /*!< Type of view 3 */
+    SAT_CFG_INT_MODULE_CURRENT_PAGE,   /*!< Number of integer parameters. */    
     SAT_CFG_INT_WARP_FACTOR,          /*!< Time compression factor. */
     SAT_CFG_INT_LIST_REFRESH,         /*!< List refresh rate (cycle). */
     SAT_CFG_INT_LIST_COLUMNS,         /*!< List column visibility. */
