@@ -1,3 +1,10 @@
+2011-07-23 Charles Suprin <hamaa1vs at gmail.com>
+
+    * src/sat-cfg.[ch]
+    * src/mod-mgr.c
+    Save and restore the current module on closing.
+
+
 2011-07-07 Charles Suprin <hamaa1vs at gmail.com>
 
     * src/gtk-polar-view.c
